# Mtypes

./: LICENSE  README.md  pyproject.toml
src/Morztypes.egg-info/: PKG-INFO  SOURCES.txt
src/Morztypes_LolosharaGd/: Morztypes.py
src/Mtypes.egg-info/: PKG-INFO  SOURCES.txt
